feat: add Tag class and rewrite creation tags

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -303,6 +303,7 @@ body {
           &>li {
             padding: 10px;
             background-color: #3636367a;
+            cursor: pointer;
 
           }
         }
