--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -176,28 +176,72 @@ body {
         width: 100%;
       }
 
-      .but-settings-toggle,
-      .back-home-button,
-      .back-cat {
 
-        width: 32px;
-        height: 32px;
-        opacity: 0.7;
-        transition: .5s;
-
-        &.displayNone {
-          display: none;
-        }
-
-        &:disabled {
-          opacity: 0.2;
-        }
-      }
 
 
     }
 
 
+  }
+
+  .but-settings-toggle,
+  .back-home-button,
+  .back-cat {
+
+    width: 32px;
+    height: 32px;
+    opacity: 0.7;
+    transition: .5s;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &.displayNone {
+      display: none;
+    }
+
+    &:disabled {
+      opacity: 0.2;
+    }
+  }
+
+  .totalCard {
+    height: 100%;
+    width: 100%;
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 30px;
+
+    h3 {
+      font-size: 26px;
+    }
+
+    p {
+      font-size: 32px;
+    }
+
+    button {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      bottom: 0;
+
+      &.back-home-button {
+        left: 0;
+
+      }
+
+      &.back-cat {
+        right: 0;
+      }
+
+
+    }
   }
 
   h1 {
