feat: add total button and all links

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -186,6 +186,7 @@ body {
 
   .but-settings-toggle,
   .back-home-button,
+  .but-repeate,
   .back-cat {
 
     width: 32px;
@@ -238,6 +239,10 @@ body {
 
       &.back-cat {
         right: 0;
+      }
+
+      &.but-repeate {
+        left: calc(50% - 20px)
       }
 
 
@@ -402,7 +407,8 @@ body {
         }
 
         .nextQButton,
-        .imgResult {
+        .imgResult,
+        .but-total {
 
           position: absolute;
           width: 30px;
@@ -418,14 +424,19 @@ body {
           left: 30px;
         }
 
-        .nextQButton {
+        .nextQButton,
+        .but-total {
 
           right: 30px;
-          background-image: url("./images/next-arrow-direction-down-left-up-right-svgrepo-com.svg");
-          background-repeat: no-repeat;
-          background-size: contain;
-          background-position: center;
+
+          img {
+            width: 100%;
+          }
+
         }
+
+
+
       }
     }
 
@@ -751,7 +762,8 @@ body {
           justify-content: flex-start;
 
           .nextQButton,
-          .imgResult {
+          .imgResult,
+          .but-total {
 
             bottom: 20px;
 
@@ -804,10 +816,7 @@ body {
 
 
         .questionCard {
-          flex-direction: row;
-          flex-wrap: wrap;
-          row-gap: 20px;
-          column-gap: 20px;
+
 
           font-size: 20px;
           justify-content: center;
@@ -827,29 +836,9 @@ body {
       }
 
       .tempDiv {
-        flex-direction: row;
-        row-gap: 20px;
-        column-gap: 20px;
-        align-items: center;
+
         padding: 80px;
-
-
-
-        .tempDivCont {
-          width: 30%;
-          row-gap: 20px;
-          height: 100%;
-          justify-content: flex-start;
-
-          .nextQButton,
-          .imgResult {
-
-            bottom: 20px;
-
-          }
-        }
       }
-
 
     }
   }
