feat: fix random answers

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -333,6 +333,7 @@ body {
         cursor: pointer;
         background-color: rgba(255, 0, 0, 0.473);
         text-align: right;
+        z-index: 999999999;
 
       }
 
