feat: add remembering and opening answers

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -266,6 +266,7 @@ body {
       align-items: unset;
     }
 
+
     .quiz-type,
     .cat-title,
     .detailedResult {
@@ -407,6 +408,11 @@ body {
       }
 
 
+    }
+
+    .detailedResult {
+      position: absolute;
+      z-index: 9999999999999999;
     }
 
     .tempDiv {
