feat: fix functions

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -353,7 +353,7 @@ body {
           display: none;
         }
 
-        &.qCImgCont {
+        &.questionCardPaintings {
           flex-direction: row;
           flex-wrap: wrap;
           justify-content: center;
