--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -567,13 +567,14 @@ body {
     display: none;
     min-width: 280px;
     width: calc(100vw - 40px);
-    height: calc(100vh - 540px);
+    row-gap: 30px;
     top: 30%;
     right: 20px;
     padding: 20px;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #57574f;
+    background-color: rgba(246, 143, 29, 1);
+
     box-shadow: 0px 0px 50px 90px #363636d7;
     transition: 0.5s;
 
@@ -584,6 +585,7 @@ body {
       position: absolute;
       right: 20px;
       cursor: pointer;
+
     }
 
     h2 {
@@ -596,17 +598,29 @@ body {
 
     .settings-list {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
       justify-content: space-between;
-      row-gap: 30px;
+      row-gap: 20px;
 
       &>li {
         display: flex;
         flex-direction: column;
         row-gap: 10px;
         padding: 10px;
-        border-bottom: 1px double rgba(246, 143, 29, 0.5);
-        border-top: 3px double rgba(246, 143, 29, 1);
+        background-color: #57574f38;
+
+        &:nth-child(2n+1) {
+          width: 75%;
+        }
+
+        &:nth-child(2n) {
+          width: 23%;
+        }
+
+        &:last-child {
+          width: 100%;
+        }
+
       }
 
       .settings-block-content {
@@ -647,24 +661,34 @@ body {
         display: none;
       }
 
-      #toggle-button-timer:checked~label[name="off"] {
+      #toggle-button-timer:checked~label[name="off"],
+      #toggle-button-music:checked~label[name="off"] {
         display: none;
       }
 
-      #toggle-button-timer:checked~label[name="on"] {
+      #toggle-button-timer:checked~label[name="on"],
+      #toggle-button-music:checked~label[name="on"] {
         display: block;
       }
+
+
+
+
+
     }
 
     .but-set-list {
       display: flex;
-      column-gap: 20px;
+      column-gap: 2%;
+
       width: 100%;
+
 
       li {
         flex-grow: 1;
 
         .but-set {
+          background-color: #57574f38;
           padding: 10px;
           width: 100%;
           color: rgba(84, 99, 172, 1);
@@ -775,7 +799,7 @@ body {
 
     .settings-popup {
       width: 400px;
-      height: 500px;
+
       top: 38%;
       right: 20px;
       box-shadow: 0px 0px 50px 1000px #363636d7;
