feat: add link to open fullsize img

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -430,6 +430,18 @@ body {
         row-gap: 10px;
         position: relative;
 
+        a {
+          position: absolute;
+          width: 20px;
+          height: 20px;
+          top: 20px;
+          right: 20px;
+
+          img {
+            width: 100%;
+          }
+        }
+
         .containerResult {
           position: absolute;
           bottom: 10px;
