--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -327,6 +327,27 @@ body {
       padding: 20px 0;
       position: relative;
 
+
+      .indicators {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        column-gap: 5px;
+        justify-content: center;
+        position: absolute;
+        top: -15px;
+
+        &.displayNone {
+          display: none;
+        }
+
+        li {
+          width: 20px;
+          height: 20px;
+          background-color: rgba(219, 190, 190, 0.45);
+        }
+      }
+
       .numTotal {
         position: absolute;
         right: 10px;
@@ -348,6 +369,17 @@ body {
         justify-content: space-between;
         row-gap: 20px;
         font-size: 16px;
+        position: relative;
+
+        .timerBox {
+          position: absolute;
+          width: 30px;
+          font-size: 28px;
+          top: -40px;
+          right: 10%;
+
+
+        }
 
         &.displayNone {
           display: none;
@@ -467,6 +499,7 @@ body {
 
     .tempDiv {
       min-width: 300px;
+      width: 100%;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -789,12 +822,30 @@ body {
         width: 100%;
         padding: 0;
 
+        .indicators {
+          left: calc(50% - 122px);
+          top: 101%;
+
+
+
+        }
+
 
         .questionCard {
           height: 100%;
           width: 75%;
           margin: auto;
           row-gap: 15px;
+
+          .timerBox {
+
+            width: 40px;
+            font-size: 35px;
+            top: -30px;
+            right: -5%;
+
+
+          }
 
           .possibleAnswers {
             row-gap: 10px;
@@ -870,12 +921,32 @@ body {
         width: 100%;
         padding: 0;
 
+        .indicators {
+          left: calc(50% - 122px);
+          top: 100%;
+
+
+
+        }
+
 
         .questionCard {
           flex-direction: row;
           flex-wrap: wrap;
           row-gap: 20px;
           column-gap: 20px;
+
+          &.questionCardPaintings {
+
+            column-gap: 15px;
+            row-gap: 15px;
+
+            &>img {
+              width: 20%;
+
+            }
+
+          }
 
           &>h2 {
             flex-grow: 2;
@@ -887,13 +958,18 @@ body {
           }
 
           &>img {
-            width: 60%;
+
+            max-width: 400px;
+            max-height: 400px;
+            margin: 0 auto;
+
 
           }
         }
       }
 
       .tempDiv {
+
         flex-direction: row;
         row-gap: 20px;
         column-gap: 20px;
@@ -966,12 +1042,28 @@ body {
 
         padding: 0;
 
+        .indicators {
+          top: 98%;
+
+
+
+
+
+          li {
+            width: 30px;
+            height: 30px;
+            background-color: rgba(219, 190, 190, 0.45);
+          }
+        }
+
 
         .questionCard {
 
 
           font-size: 20px;
           justify-content: center;
+
+
 
           &>h2 {
             flex-grow: 1;
@@ -980,8 +1072,9 @@ body {
           }
 
           &>img {
-            width: 45%;
-            margin: 0;
+            max-width: 600px;
+            max-height: 600px;
+
 
 
           }
