feat: add transition for possible answers

--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -381,6 +381,13 @@ body {
 
         }
 
+        &>img {
+          position: relative;
+          left: -500px;
+          opacity: 0;
+          transition: .5s;
+        }
+
         &.displayNone {
           display: none;
         }
