--- a/migration-newip-to-ts/src/global.css
+++ b/migration-newip-to-ts/src/global.css
@@ -1,71 +1,68 @@
 body,
 html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    color: #fff;
-    background: rgb(120, 124, 138);
-    font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
+  color: #fff;
+  background: rgb(120, 124, 138);
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
 main {
-    flex-grow: 1;  
+  flex-grow: 1;
 }
 
 header {
-    padding: 10px 30px;
+  padding: 10px 30px;
 }
 
 header h1 {
-    font-size: 40px;
-    font-weight: 800;
-    text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+  text-align: center;
 }
 
 footer ul {
-    display: flex;
-    flex-direction: column;
-    row-gap: .5em;
-    align-items: center;
-    justify-content: space-around;
-    list-style: none;
-    padding: .5em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5em;
+  align-items: center;
+  justify-content: space-around;
+  list-style: none;
+  padding: 0.5em;
 }
 
 footer {
-    
-    font-size: 14px;
-    color: #333;
-    text-align: center;
+  font-size: 14px;
+  color: #333;
+  text-align: center;
 }
 
 footer a {
-    color: #444;
-    text-decoration: none;
+  color: #444;
+  text-decoration: none;
 }
 
 footer .copyright a:hover {
-    color: #555;
+  color: #555;
 }
 
 footer .copyright:before {
-    content: '©';
+  content: "©";
 }
 
 @media (min-width: 640px) {
-
-    footer ul {
-        flex-direction: row;
-    }
-
+  footer ul {
+    flex-direction: row;
+  }
 }
