feat: add eventListner for selections

--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -184,3 +184,8 @@ label:hover {
     right: 1rem;
   }
 }
+.golden-star-image {
+  background-image: url(./assets/svg/star-full.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
