--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
 html {
   font-size: 16px;
   font-family: "Jura", sans-serif;
@@ -159,7 +160,7 @@ label:hover {
   padding: 2rem;
   column-gap: 1rem;
   row-gap: 1rem;
-  align-items: flex-start;
+
   align-self: flex-start;
 }
 .toy-item {
