refactor: slider value

--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -149,7 +149,7 @@ input[type="checkbox"]:checked ~ label {
 label:hover {
   opacity: 1;
 }
-
+.reset-storage,
 .reset-filter,
 .search-input,
 .sort-select {
