--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -69,7 +69,7 @@ h4 {
   background-color: #567d30;
   display: flex;
 }
-.filter {
+.settings {
   width: 350px;
   padding: 1.5em;
   display: flex;
@@ -168,6 +168,7 @@ label:hover {
 }
 .toy-item {
   width: 280px;
+  height: 200px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -176,12 +177,24 @@ label:hover {
   background-color: #355829;
   color: white;
   cursor: pointer;
+  overflow: hidden;
+  &:hover {
+    .toy-image {
+      width: 250px;
+      opacity: 0.8;
+      top: -5%;
+      left: 20%;
+      transition: 1s;
+    }
+  }
 
   .toy-image {
     position: absolute;
-    width: 150px;
+    width: 200px;
     opacity: 0.3;
-    left: 50%;
+    top: -10%;
+    left: 55%;
+    transition: 1s;
   }
   .star-image {
     position: absolute;
@@ -191,6 +204,7 @@ label:hover {
     right: 1rem;
   }
 }
+
 .golden-star-image {
   background-image: url(./assets/svg/star-full.svg);
   background-repeat: no-repeat;
@@ -212,7 +226,7 @@ label:hover {
   background-color: transparent;
   position: absolute;
   right: 1rem;
-  top: 0.5rem;
+  top: 3.4rem;
   opacity: 0.5;
   img {
     width: 100%;
@@ -251,4 +265,66 @@ div.noUi-touch-area {
   border: none;
   border-radius: 0;
   bottom: -200%;
+}
+.selection-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s all;
+  z-index: 2;
+  .small-title {
+    font-size: 1.1rem;
+  }
+}
+.selection-container.active {
+  opacity: 1;
+  pointer-events: all;
+  transition: 0.5s all;
+}
+.selection-inner {
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background: #ceb31e;
+  padding: 2rem;
+  transition: 0.5s all;
+  display: flex;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  flex-wrap: wrap;
+  .toy-item {
+    width: 250px;
+    height: 100px;
+    overflow: hidden;
+    justify-content: space-between;
+    .toy-image {
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
+.selection-inner.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: 0.5s all;
+}
+
+.selection-inner__close {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  border: none;
+  background-color: transparent;
+  opacity: 0.5;
+}
+.selection-inner__close:hover {
+  opacity: 1;
 }
