--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -149,6 +149,7 @@ input[type="checkbox"]:checked ~ label {
 label:hover {
   opacity: 1;
 }
+.open-selected,
 .reset-storage,
 .reset-filter,
 .search-input,
