--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -194,6 +194,7 @@ label:hover {
   color: white;
   cursor: pointer;
   overflow: hidden;
+  transition: 0.5s;
 
   &:hover {
     .toy-image {
@@ -220,6 +221,7 @@ label:hover {
     opacity: 0.7;
     bottom: 1rem;
     right: 1rem;
+    transition: 0.5s;
   }
 }
 
@@ -231,7 +233,9 @@ label:hover {
 
 .selection-warning,
 .search-warning {
-  color: rgb(170, 34, 34);
+  color: white;
+  font-size: 1.5em;
+  transition: 0.5s;
 }
 
 .search-section {
