--- a/christmas-task/src/styles.scss
+++ b/christmas-task/src/styles.scss
@@ -162,7 +162,7 @@ input[type="checkbox"]:checked ~ label {
 label:hover {
   opacity: 1;
 }
-
+.clear-selected,
 .open-selected,
 .reset-storage,
 .reset-filter,
