--- a/christmas-task/src/index.scss
+++ b/christmas-task/src/index.scss
@@ -1,73 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
-html {
-  font-size: 16px;
-  font-family: "Jura", sans-serif;
-  background-color: #355829;
-}
+@import url("./common.scss");
+//main
+.start-window {
+  background-image: url("./assets/3080543.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 30%;
 
-.body {
-  background-color: #8fb14e;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #355829;
+  .main {
+    background-color: rgba(53, 88, 41, 0.1);
+  }
+  .header,
+  .footer {
+    background-color: rgba(142, 177, 78, 0.9);
+  }
 }
+.start-game {
+  padding: 1.5rem;
+  font-size: 3rem;
+  margin: auto;
+  border: none;
+  font-weight: bold;
+  background-color: transparent;
 
-a {
-  color: #8fb14e;
-  text-decoration: none;
+  a {
+    color: #ceb31e;
+    &:hover {
+      color: gold;
+    }
+  }
 }
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-label,
-button,
-select,
-input[type="checkbox"] {
-  cursor: pointer;
-}
-
-.header {
-  padding: 1em;
-  text-align: center;
-}
-
-.big-title {
-  font-size: 2rem;
-}
-
-.middle-title {
-  font-size: 1.5rem;
-}
-
-.small-title {
-  font-size: 1.2rem;
-}
-
-h3,
-h4 {
-  padding: 0;
-  margin: 0;
-  margin-right: auto;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-around;
-  padding: 1em;
-  align-items: center;
-}
-
-.main {
-  background-color: #567d30;
-  display: flex;
+.header nav {
+  text-align: left;
 }
