--- a/christmas-task/src/toys.scss
+++ b/christmas-task/src/toys.scss
@@ -1,74 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&display=swap");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
-html {
-  font-size: 16px;
-  font-family: "Jura", sans-serif;
-}
-
-.body {
-  background-color: #8fb14e;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  color: #355829;
-}
-
-a {
-  color: #355829;
-  text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-label,
-button,
-select,
-input[type="checkbox"] {
-  cursor: pointer;
-}
-
-.header {
-  padding: 1em;
-  text-align: center;
-}
-
-.big-title {
-  font-size: 2rem;
-}
-
-.middle-title {
-  font-size: 1.5rem;
-}
-
-.small-title {
-  font-size: 1.2rem;
-}
-
-h3,
-h4 {
-  padding: 0;
-  margin: 0;
-  margin-right: auto;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-around;
-  padding: 1em;
-  align-items: center;
-}
-
+@import url("./common.scss");
 .main {
   background-color: #567d30;
-  display: flex;
 }
 //фильтры
 .settings {
@@ -251,7 +183,7 @@ h4 {
       transition: 0.5s;
     }
     .golden-star-image {
-      background-image: url(./assets/svg/star-full.svg);
+      background-image: url("./assets/svg/star-full.svg");
       background-repeat: no-repeat;
       background-size: contain;
     }
