--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -3,11 +3,13 @@
 
 .main {
   background-color: #ceb31e;
+  justify-content: space-evenly;
   & > div {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-
+    justify-content: space-between;
+    width: 400px;
     section {
       margin: 1rem;
 
@@ -20,6 +22,7 @@
         flex-wrap: wrap;
         row-gap: 1rem;
         column-gap: 1rem;
+        justify-content: space-evenly;
 
         li {
           background-color: rgba(255, 255, 255, 0.3);
