--- a/christmas-task/src/toys.scss
+++ b/christmas-task/src/toys.scss
@@ -28,10 +28,12 @@
       }
       label {
         display: block;
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         opacity: 0.5;
-        transition: 0.3s;
+        transition: 0.5s;
+        padding: 0.5rem;
+
         &:hover {
           opacity: 1;
         }
@@ -48,6 +50,8 @@
       }
 
       input[type="checkbox"]:checked ~ label {
+        border: 3px solid #ffd700;
+        border-radius: 50%;
         opacity: 0.9;
       }
 
