--- a/christmas-task/src/toys/toys.scss
+++ b/christmas-task/src/toys/toys.scss
@@ -1,4 +1,4 @@
-@import url("./common.scss");
+@import url("../common.scss");
 .main {
   background-color: #567d30;
 }
@@ -200,7 +200,7 @@
       }
     }
     .golden-star-image {
-      background-image: url("./assets/svg/star-full.svg");
+      background-image: url("../assets/svg/star-full.svg");
       background-repeat: no-repeat;
       background-size: contain;
     }
