--- a/christmas-task/src/common.scss
+++ b/christmas-task/src/common.scss
@@ -96,3 +96,78 @@ h4 {
   display: flex;
   flex-grow: 1;
 }
+input[type="checkbox"],
+input[type="radio"] {
+  display: none;
+}
+
+label {
+  opacity: 0.5;
+  display: block;
+  transition: 0.5s;
+  width: 100%;
+  height: 100%;
+}
+input[type="checkbox"] ~ label:hover,
+input[type="radio"] ~ label:hover {
+  opacity: 1;
+}
+
+input[type="checkbox"]:checked + label,
+input[type="radio"]:checked + label {
+  transition: 0.5s;
+  opacity: 1;
+  padding: 0.2rem;
+  border: 3px solid #ffd700;
+  border-radius: 50%;
+}
+
+.small-item-container li,
+label[for="favorite"] {
+  width: 50px;
+  height: 50px;
+}
+.small-item-container label img,
+label[for="favorite"] img {
+  width: 100%;
+  height: 100%;
+}
+
+.middle-item-container li {
+  width: 75px;
+  height: 75px;
+  padding: 0.2rem;
+}
+.middle-item-container label img {
+  width: 100%;
+  height: 100%;
+}
+.big-item-container li {
+  width: 100px;
+  height: 100px;
+  padding: 0.5rem;
+}
+.big-item-container label img {
+  width: 100%;
+  height: 100%;
+}
+
+.color_white {
+  background-color: white;
+}
+
+.color_yellow {
+  background-color: yellow;
+}
+
+.color_red {
+  background-color: red;
+}
+
+.color_blue {
+  background-color: blue;
+}
+
+.color_green {
+  background-color: green;
+}
