feat: reset button for game settings

--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -77,8 +77,8 @@
       }
     }
 
-    .settings {
-      flex-direction: row;
+    .settings ul {
+      justify-content: left;
     }
   }
   .result-screen {
