--- a/christmas-task/src/common.scss
+++ b/christmas-task/src/common.scss
@@ -171,3 +171,11 @@ label[for="favorite"] img {
 .color_green {
   background-color: green;
 }
+
+.default-button {
+  min-width: 270px;
+  height: 40px;
+  padding: 0.5em;
+  border-radius: 0.2em;
+  border: 2px solid #567d30;
+}
