feat: add pulsing garland logic

--- a/christmas-task/src/common.scss
+++ b/christmas-task/src/common.scss
@@ -155,7 +155,9 @@ label[for="favorite"] img {
 .color_white {
   background-color: white;
 }
-
+.color_multy {
+  background-color: white;
+}
 .color_yellow {
   background-color: yellow;
 }
