--- a/christmas-task/src/trees.scss
+++ b/christmas-task/src/trees.scss
@@ -4,46 +4,47 @@
 .main {
   background-color: #ceb31e;
   justify-content: space-evenly;
+
   & > div {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     width: 400px;
     row-gap: 2rem;
+
     section {
       display: flex;
       flex-direction: column;
       row-gap: 2rem;
-      ul {
-        display: flex;
-        flex-wrap: wrap;
-        row-gap: 1rem;
-        column-gap: 1rem;
-        justify-content: space-evenly;
+    }
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 1rem;
+      column-gap: 1rem;
+      justify-content: space-evenly;
 
-        li {
-          cursor: pointer;
+      li {
+        cursor: pointer;
 
-          label {
-            width: 100%;
-            height: 100%;
-            img {
-              width: 100%;
-              height: 100%;
-            }
-          }
-
+        label {
+          width: 100%;
+          height: 100%;
           img {
-            position: relative;
-            z-index: 10;
             width: 100%;
             height: 100%;
           }
         }
+
+        img {
+          position: relative;
+          z-index: 10;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
-
     .garland-options {
       position: relative;
       li {
@@ -53,28 +54,13 @@
         border-radius: 50%;
       }
       input[name="garland"]:checked + .animate-blink {
-        animation: animate_blink 3s infinite;
         border: none;
+        animation: animate_blink 2s infinite;
+        &.color_multy {
+          animation: animate_blink_multy 2s infinite;
+        }
       }
 
-      .animate-blink:hover {
-        animation: none;
-      }
-      @keyframes animate_blink {
-        0% {
-          transform: scale3d(1, 1, 1);
-          box-shadow: 0 0 0 0 rgb(228, 25, 49, 0);
-        }
-        50% {
-          transform: scale3d(1.1, 1.1, 1.1);
-          background-color: white;
-          box-shadow: 0 0 2px 5px rgb(228, 25, 49, 0.2);
-        }
-        100% {
-          transform: scale3d(0.9, 0.9, 0.9);
-          box-shadow: 0 0 0 0 rgb(228, 25, 49, 0);
-        }
-      }
       .garland-enabler {
         display: block;
         position: absolute;
@@ -106,8 +92,10 @@
   }
   .result-screen {
     width: 50%;
+    max-height: 100vh;
     flex-shrink: 0;
     background-color: #567d30;
+    position: relative;
 
     &.bg {
       background-position: center;
@@ -139,22 +127,36 @@
       background-image: url("./assets/bg/10.jpg");
     }
     .tree-img {
-      width: 400px;
-      height: 600px;
-      margin: auto auto 2% auto;
+      width: 40%;
+      position: absolute;
+      bottom: 5%;
+      left: calc(50% - 20%);
     }
   }
 }
 
-#garland-block {
-  position: relative;
+#garland-block-first,
+#garland-block-second,
+#garland-block-third,
+#garland-block-fourth,
+#garland-block-fifth {
+  position: absolute;
   z-index: 77777;
+
+  flex-wrap: nowrap;
+  column-gap: 0;
+  row-gap: 0;
   li {
     width: 10px;
     height: 10px;
-    background-color: red;
-    animation: animate_blink 3s infinite;
+    border-radius: 50%;
 
+    &:nth-child(odd) {
+      animation: animate_blink 2s infinite;
+    }
+    &:nth-child(even) {
+      animation: animate_blink 4s infinite;
+    }
     &:nth-child(2) {
       margin-top: 20px;
     }
@@ -162,46 +164,103 @@
       margin-top: 40px;
     }
     &:nth-child(4) {
-      margin-top: 60px;
+      margin-top: 50px;
     }
     &:nth-child(5) {
-      margin-top: 80px;
+      margin-top: 60px;
     }
     &:nth-child(6) {
-      margin-top: 100px;
+      margin-top: 60px;
     }
     &:nth-child(7) {
-      margin-top: 120px;
+      margin-top: 50px;
     }
     &:nth-child(8) {
-      margin-top: 140px;
+      margin-top: 40px;
     }
     &:nth-child(9) {
-      margin-top: 160px;
-    }
-    &:nth-child(10) {
-      margin-top: 180px;
-    }
-    &:nth-child(11) {
-      margin-top: 200px;
+      margin-top: 30px;
     }
   }
-  .animate-blink:hover {
+  li.color_multy {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
     animation: none;
+    &:nth-child(odd) {
+      animation: animate_blink_multy 2s infinite;
+    }
+    &:nth-child(even) {
+      animation: animate_blink_multy 4s infinite;
+    }
   }
-  @keyframes animate_blink {
-    0% {
-      transform: scale3d(1, 1, 1);
-      box-shadow: 0 0 0 0 rgb(228, 25, 49, 0);
-    }
-    50% {
-      transform: scale3d(1.1, 1.1, 1.1);
-      background-color: white;
-      box-shadow: 0 0 2px 5px rgb(228, 25, 49, 0.2);
-    }
-    100% {
-      transform: scale3d(0.9, 0.9, 0.9);
-      box-shadow: 0 0 0 0 rgb(228, 25, 49, 0);
-    }
+}
+#garland-block-first {
+  bottom: 10%;
+  width: 40%;
+  left: calc(30%);
+}
+#garland-block-second {
+  bottom: 20%;
+  width: 30%;
+  left: calc(35%);
+}
+#garland-block-third {
+  bottom: 30%;
+  width: 20%;
+  left: calc(40%);
+}
+#garland-block-fourth {
+  bottom: 40%;
+  width: 17%;
+  left: calc(42.5%);
+}
+#garland-block-fifth {
+  bottom: 50%;
+  width: 12%;
+  left: calc(45%);
+}
+
+@keyframes animate_blink {
+  0% {
+    transform: scale3d(0.9, 0.9, 0.9);
+    box-shadow: 0 0 5px 7px rgb(255, 215, 0, 0.2);
+  }
+  50% {
+    transform: scale3d(1, 1, 1);
+    background-color: white;
+    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.2);
+  }
+  100% {
+    transform: scale3d(0.9, 0.9, 0.9);
+    box-shadow: 0 0 5px 7px rgb(255, 215, 0, 0.2);
+  }
+}
+
+@keyframes animate_blink_multy {
+  0% {
+    transform: scale3d(1, 1, 1);
+    box-shadow: 0 0 5px 7px rgb(228, 25, 49, 0.2);
+    background-color: white;
+  }
+  25% {
+    transform: scale3d(1.1, 1.1, 1.1);
+    background-color: green;
+    box-shadow: 0 0 5px 7px rgb(255, 0, 0, 0.2);
+  }
+  50% {
+    transform: scale3d(1.2, 1.2, 1.2);
+    background-color: red;
+    box-shadow: 0 0 5px 7px rgb(0, 128, 0, 0.2);
+  }
+  75% {
+    transform: scale3d(1, 1, 1);
+    background-color: blue;
+    box-shadow: 0 0 5px 7px rgb(255, 215, 0, 0.2);
+  }
+  100% {
+    transform: scale3d(0.9, 0.9, 0.9);
+    background-color: yellow;
+    box-shadow: 0 0 5px 7px rgb(0, 0, 255, 0.2);
   }
 }
